<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="BA02PL_LineBackground" Id="{3c14947d-ab13-4a56-9101-d2239dd3d8ae}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM BA02PL_LineBackground
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[MAIN.stLine_BA02PL.fbLine(stLine:=MAIN.stLine_BA02PL);
MAIN.stLine_BA02PL.stStation_BA02PL01.fbStation(
				stLine:=MAIN.stLine_BA02PL,
				stStation:=MAIN.stLine_BA02PL.stStation_BA02PL01);
MAIN.stLine_BA02PL.stStation_BA02PL02.fbStation(
				stLine:=MAIN.stLine_BA02PL,
				stStation:=MAIN.stLine_BA02PL.stStation_BA02PL02);
MAIN.stLine_BA02PL.stStation_BA02PL03.fbStation(
				stLine:=MAIN.stLine_BA02PL,
				stStation:=MAIN.stLine_BA02PL.stStation_BA02PL03);
MAIN.stLine_BA02PL.stStation_BA02PL04.fbStation(
				stLine:=MAIN.stLine_BA02PL,
				stStation:=MAIN.stLine_BA02PL.stStation_BA02PL04);
MAIN.stLine_BA02PL.stStation_BA02PL05.fbStation(
				stLine:=MAIN.stLine_BA02PL,
				stStation:=MAIN.stLine_BA02PL.stStation_BA02PL05);
MAIN.stLine_BA02PL.stStation_BA02PL06.fbStation(
				stLine:=MAIN.stLine_BA02PL,
				stStation:=MAIN.stLine_BA02PL.stStation_BA02PL06);
MAIN.stLine_BA02PL.stStation_BA02PL07.fbStation(
				stLine:=MAIN.stLine_BA02PL,
				stStation:=MAIN.stLine_BA02PL.stStation_BA02PL07);]]></ST>
    </Implementation>
    <LineIds Name="BA02PL_LineBackground">
      <LineId Id="139" Count="2" />
      <LineId Id="135" Count="0" />
      <LineId Id="143" Count="1" />
      <LineId Id="142" Count="0" />
      <LineId Id="146" Count="1" />
      <LineId Id="145" Count="0" />
      <LineId Id="149" Count="1" />
      <LineId Id="148" Count="0" />
      <LineId Id="152" Count="1" />
      <LineId Id="151" Count="0" />
      <LineId Id="155" Count="1" />
      <LineId Id="154" Count="0" />
      <LineId Id="158" Count="1" />
      <LineId Id="157" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>